# derenv

./: .env.test  Cargo.toml  README.md
src/: inner.rs  lib.rs
tests/: .env  read_env.rs
