[package]
name = "derenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
litrs = "0.3.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[features]
# Enables the use of Span::source_file, tracked here: https://github.com/rust-lang/rust/issues/54725
nightly = []
